- drakfont:
  o fix moving fonts (mga#16074)

Version 16.102 - 29 May 2015

- diskdrake:
  o ignore special 'Packard_Bell' and 'Push_Button_Reset' partitions (mga#15999)
  o run udevadm settle after actions that trigger device reload (mga#15999)
- harddrake2:
  o set min width for left panel (mga#16026)

Version 16.101 - 25 May 2015

- library (for draklive-install):
  o fix not always suggesting /boot/ESP mount point (mga#15689)
- diskdrake:
  o set pt_type according to fs_type before flag cases (mga#16029)
- localedrake:
  o fix reading back IM config (mga#15761)

Version 16.99 - 20 May 2015

- diskdrake:
  o display cosmetics when reading back GPT partitions
  o fix mnt point for FAT partitions on GTP (mga#15987)
  o set the proper GUID for FAT partitions on GPT
- drakboot:
  o do not detect grub2 on UEFI when there's no bootloader
  o fix default grub2 kernel parameters (mga#15984)

Version 16.98 - 19 May 2015

- all tools:
  o fix banner icon being cliped (mga#12358)
- drakfont:
  o fix crash (mga#13627)
  o fix crash with --windows_import (mga9347)
  o fix an error with --testing (mga#13363)
- localedrake:
  o don't try to install non existant scim-googlepinyin (mga#6681)

Version 16.97 - 18 May 2015

- library (for draklive-install):
  o enables to get raw available space (mga15257)

Version 16.96 - 17 May 2015

- library (for draklive-install):
  o fix regression refusing FAT for ESP (mga#15962)

Version 16.95 - 14 May 2015

- library (for draklive-install):
  o fix a crash after "insufficient space" error (mga#15919)
- diskdrake:
  o fix a gtk+3 regression crash with --dav (mga#13204)

Version 16.93 - 9 May 2015

- drakboot:
  o do use vga value for grub2
  o fix setting default grub2 entry

Version 16.92 - 9 May 2015

- drakx-net:
  o recognize r8723bs (mga#15874)
- diskdrake:
  o do not set noauto for /boot/EFI (mga#15627)
- drakboot:
  o backup grub2 files before configuring
- harddrake2:
  o fix detecting AHCI as SATA (mga#9992)