@@ -1,3 +1,7 @@
+- diskdrake, partitioning_wizard:
+  o only use current disk when auto partitioning, wiping disk,
+    using free space (mga#16055)
+
 Version 16.102 - 29 May 2015
 
 - diskdrake:
